Ajustes de layout, amostragem do QRC

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "qrcode": "^1.4.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-scroll": "^1.7.16",
     "react-textarea-autosize": "^7.1.2"
   }
 }
