--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
     "start": "next start"
   },
   "dependencies": {
-    "html-react-parser": "^0.10.3",
     "next": "9.3.4",
     "next-pwa": "^2.3.3",
     "qrcode": "^1.4.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-render-html": "^0.6.0",
     "react-scroll": "^1.7.16",
     "react-textarea-autosize": "^7.1.2"
   }
