--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-lazy-load-image-component": "^1.4.3",
     "react-render-html": "^0.6.0",
     "react-scroll": "^1.7.16",
+    "react-spinners": "^0.8.3",
     "react-textarea-autosize": "^7.1.2"
   }
 }
