--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
   },
   "dependencies": {
     "axios": "^0.19.2",
+    "dotenv-webpack": "^1.8.0",
     "next": "9.3.4",
     "next-pwa": "^2.3.3",
     "nextjs-progressbar": "^0.0.5",
     "react": "16.13.1",
+    "react-datepicker": "^2.15.0",
     "react-dom": "16.13.1",
     "react-ga": "^2.7.0",
     "react-lazy-load-image-component": "^1.4.3",
+    "react-number-format": "^4.4.1",
     "react-render-html": "^0.6.0",
     "react-scroll": "^1.7.16",
     "react-spinners": "^0.8.3",
