--- a/public/manifest.json
+++ b/public/manifest.json
@@ -9,8 +9,26 @@
     "start_url": "/",
     "icons": [
       {
-        "src": "/icons/icon.png",
-        "sizes": "48x48 96x96 192x192 512x512",
+        "src": "/icons/icon48.png",
+        "sizes": "48x48",
+        "type": "image/png",
+        "purpose": "any maskable"
+      },
+      {
+        "src": "/icons/icon96.png",
+        "sizes": "96x96",
+        "type": "image/png",
+        "purpose": "any maskable"
+      },
+      {
+        "src": "/icons/icon192.png",
+        "sizes": "192x192",
+        "type": "image/png",
+        "purpose": "any maskable"
+      },
+      {
+        "src": "/icons/icon512.png",
+        "sizes": "512x512",
         "type": "image/png",
         "purpose": "any maskable"
       }
