--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next-pwa": "^2.3.3",
     "nextjs-progressbar": "^0.0.5",
     "react": "16.13.1",
+    "react-animated-css": "^1.2.1",
     "react-datepicker": "^2.15.0",
     "react-dom": "16.13.1",
     "react-ga": "^2.7.0",
