--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.19.2",
     "dotenv-webpack": "^1.8.0",
+    "framer-motion": "^1.11.1",
     "next": "9.3.4",
     "next-pwa": "^2.3.3",
     "nextjs-progressbar": "^0.0.5",
@@ -18,6 +19,7 @@
     "react-datepicker": "^2.15.0",
     "react-dom": "^16.13.1",
     "react-ga": "^2.7.0",
+    "react-icons": "^3.10.0",
     "react-lazy-load-image-component": "^1.4.3",
     "react-number-format": "^4.4.1",
     "react-render-html": "^0.6.0",
