--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "apod-space",
-  "version": "1.12.64",
+  "version": "1.22.70",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -16,6 +16,7 @@
     "nextjs-progressbar": "^0.0.5",
     "react": "16.13.1",
     "react-animated-css": "^1.2.1",
+    "react-copy-to-clipboard": "^5.0.2",
     "react-datepicker": "^2.15.0",
     "react-dom": "^16.13.1",
     "react-ga": "^2.7.0",
