--- a/package.json
+++ b/package.json
@@ -27,5 +27,9 @@
     "react-scroll": "^1.7.16",
     "react-spinners": "^0.8.3",
     "react-textarea-autosize": "^7.1.2"
+  },
+  "devDependencies": {
+    "@types/react": "^16.9.43",
+    "typescript": "^3.9.7"
   }
 }
