--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint src --ext .ts,.tsx",
     "lint:fix": "npm run lint -- --fix",
     "test": "jest --watch",
+    "cypress:open": "cypress open",
     "format": "prettier --write \"{,!(.next)/**/,!(node_modules)/**/}*.{js,jsx,css,scss}\""
   },
   "lint-staged": {
@@ -47,6 +48,7 @@
     "@typescript-eslint/eslint-plugin": "^3.9.1",
     "@typescript-eslint/parser": "^3.9.1",
     "babel-jest": "^26.3.0",
+    "cypress": "^5.0.0",
     "eslint": "^7.7.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-config-standard": "^14.1.1",
