--- a/package.json
+++ b/package.json
@@ -42,8 +42,12 @@
     "react-textarea-autosize": "^8.2.0"
   },
   "devDependencies": {
+    "@types/next": "^9.0.0",
     "@types/node": "^14.6.0",
     "@types/react": "^16.9.48",
+    "@types/react-copy-to-clipboard": "^4.3.0",
+    "@types/react-datepicker": "^3.1.1",
+    "@types/react-lazy-load-image-component": "^1.5.1",
     "@types/styled-components": "^5.1.2",
     "@typescript-eslint/eslint-plugin": "^3.9.1",
     "@typescript-eslint/parser": "^3.9.1",
