--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-lazy-load-image-component": "^1.4.3",
     "react-number-format": "^4.4.1",
     "react-render-html": "^0.6.0",
+    "react-reveal": "^1.2.2",
     "react-scroll": "^1.7.16",
     "react-spinners": "^0.9.0",
     "react-textarea-autosize": "^8.2.0"
