--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "axios": "^0.20.0",
     "dotenv-webpack": "^2.0.0",
     "framer-motion": "^2.6.3",
-    "next": "9.5.2",
+    "next": "^9.5.5",
     "next-pwa": "^3.1.3",
     "nextjs-progressbar": "^0.0.5",
     "react": "16.13.1",
@@ -53,7 +53,6 @@
     "@typescript-eslint/eslint-plugin": "^3.9.1",
     "@typescript-eslint/parser": "^3.9.1",
     "babel-jest": "^26.3.0",
-    "cypress": "^5.0.0",
     "eslint": "^7.7.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-config-standard": "^14.1.1",
