[FEAT?] bug ajust from arror pages

--- a/package.json
+++ b/package.json
@@ -21,26 +21,40 @@
     }
   },
   "dependencies": {
-    "axios": "^0.20.0",
+       "axios": "^0.20.0",
+    "chart.js": "^2.9.3",
+    "classnames": "^2.2.6",
+    "crypto-js": "^4.0.0",
     "dotenv-webpack": "^2.0.0",
-    "framer-motion": "^2.6.3",
-    "next": "^9.5.5",
+    "framer-motion": "^2.6.6",
+    "next": "9.4.4",
     "next-pwa": "^3.1.3",
-    "nextjs-progressbar": "^0.0.5",
+    "nextjs-progressbar": "^0.0.6",
+    "node-sass": "^4.14.1",
+    "perfect-scrollbar": "^1.5.0",
+    "prop-types": "^15.7.2",
     "react": "16.13.1",
-    "react-animated-css": "^1.2.1",
-    "react-copy-to-clipboard": "^5.0.2",
-    "react-datepicker": "^3.1.3",
-    "react-dom": "^16.13.1",
-    "react-ga": "^3.1.2",
+    "react-chartjs-2": "^2.9.0",
+    "react-datepicker": "^3.0.0",
+    "react-dom": "16.13.1",
+    "react-ga": "^3.0.0",
+    "react-hook-form": "^6.0.4",
     "react-icons": "^3.10.0",
-    "react-lazy-load-image-component": "^1.4.3",
+    "react-lazy-load-image-component": "^1.5.0",
+    "react-notification-alert": "^0.0.12",
     "react-number-format": "^4.4.1",
     "react-render-html": "^0.6.0",
     "react-reveal": "^1.2.2",
     "react-scroll": "^1.7.16",
+    "react-slick": "^0.27.9",
     "react-spinners": "^0.9.0",
-    "react-textarea-autosize": "^8.2.0"
+    "react-textarea-autosize": "^8.0.1",
+    "reactstrap": "^8.5.1",
+    "slick-carousel": "^1.8.1",
+    "styled-components": "^5.2.0",
+    "yup": "^0.29.1",
+    "react-animated-css": "^1.2.1",
+    "react-copy-to-clipboard": "^5.0.2"
   },
   "devDependencies": {
     "@types/next": "^9.0.0",
