--- a/public/manifest.json
+++ b/public/manifest.json
@@ -38,45 +38,25 @@
       "name": "Last Days",
       "url": "/",
       "description": "Last 3 or 4 days",
-      "icons": {
-        "src": "/icons/icon192.png",
-        "sizes": "192x192",
-        "type": "image/png",
-        "purpose": "any maskable"
-      }
+      "icon": "/icons/icon192.png"
     },
     {
       "name": "Calendar",
       "url": "/calendar",
       "description": "Select date on Calendar",
-      "icons": {
-        "src": "/icons/calendar.png",
-        "sizes": "192x192",
-        "type": "image/png",
-        "purpose": "any maskable"
-      }
+      "icon": "/icons/calendar.png"
     },
     {
       "name": "Images",
       "url": "/images",
       "description": "List of all resent images in NASA Apod",
-      "icons": {
-        "src": "/icons/images.png",
-        "sizes": "192x192",
-        "type": "image/png",
-        "purpose": "any maskable"
-      }
+      "icon": "/icons/images.png"
     },
     {
       "name": "About",
       "url": "/about",
       "description": "About Project",
-      "icons": {
-        "src": "/icons/about.png",
-        "sizes": "192x192",
-        "type": "image/png",
-        "purpose": "any maskable"
-      }
+      "icon":"/icons/about.png"
     }
   ]
 }
