--- a/package.json
+++ b/package.json
@@ -23,17 +23,17 @@
   "dependencies": {
     "axios": ">=0.21.1",
     "dotenv-webpack": "^2.0.0",
-    "next": "^10.0.4",
-    "next-pwa": "^3.1.3",
+    "next": "12.3.1",
+    "next-pwa": "5.5.4",
     "nextjs-progressbar": "^0.0.6",
     "node-sass": "^4.14.1",
     "perfect-scrollbar": "^1.5.0",
     "prop-types": "^15.7.2",
-    "react": "16.13.1",
+    "react": "18.2.0",
     "react-animated-css": "^1.2.1",
     "react-copy-to-clipboard": "^5.0.2",
     "react-datepicker": "^3.0.0",
-    "react-dom": "16.13.1",
+    "react-dom": "18.2.0",
     "react-ga": "^3.0.0",
     "react-icons": "^3.10.0",
     "react-lazy-load-image-component": "^1.5.0",
@@ -43,16 +43,15 @@
     "react-spinners": "^0.9.0"
   },
   "devDependencies": {
-    "@types/next": "^9.0.0",
     "@types/node": "^14.6.0",
-    "@types/react": "^16.9.48",
     "@types/react-copy-to-clipboard": "^4.3.0",
     "@types/react-datepicker": "^3.1.1",
     "@types/react-lazy-load-image-component": "^1.5.1",
     "@typescript-eslint/eslint-plugin": "^3.9.1",
     "@typescript-eslint/parser": "^3.9.1",
     "babel-jest": "^26.3.0",
-    "eslint": "^7.7.0",
+    "eslint": "8.24.0",
+    "eslint-config-next": "12.3.1",
     "eslint-config-prettier": "^6.11.0",
     "eslint-config-standard": "^14.1.1",
     "eslint-plugin-import": "^2.22.0",
@@ -67,6 +66,6 @@
     "lint-staged": "^10.2.13",
     "prettier": "^2.1.0",
     "prettier-eslint": "^11.0.0",
-    "typescript": "4.0.2"
+    "typescript": "4.3.2"
   }
 }
