--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "apod-space",
   "version": "1.33.70",
   "private": true,
+  "engines": {
+    "node": ">=14.x"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -11,17 +14,17 @@
   "dependencies": {
     "axios": ">=0.21.1",
     "dotenv-webpack": "^2.0.0",
-    "next": "13.0.6",
+    "next": "^13.0.6",
     "next-pwa": "5.5.4",
     "nextjs-progressbar": "^0.0.6",
     "node-sass": "^4.14.1",
     "perfect-scrollbar": "^1.5.0",
     "prop-types": "^15.7.2",
-    "react": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-animated-css": "^1.2.1",
     "react-copy-to-clipboard": "^5.0.2",
     "react-datepicker": "^3.0.0",
-    "react-dom": "18.2.0",
     "react-ga": "^3.0.0",
     "react-icons": "^3.10.0",
     "react-lazy-load-image-component": "^1.5.0",
@@ -31,7 +34,8 @@
     "react-spinners": "^0.9.0"
   },
   "devDependencies": {
-    "@types/node": "^14.6.0",
+    "@types/node": "^17.0.4",
+    "@types/react": "^17.0.38",
     "@types/react-copy-to-clipboard": "^4.3.0",
     "@types/react-datepicker": "^3.1.1",
     "@types/react-lazy-load-image-component": "^1.5.1",
@@ -54,6 +58,6 @@
     "lint-staged": "^10.2.13",
     "prettier": "^2.1.0",
     "prettier-eslint": "^11.0.0",
-    "typescript": "4.3.2"
+    "typescript": "4.5.4"
   }
 }
