--- a/package.json
+++ b/package.json
@@ -12,18 +12,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@notionhq/client": "^2.2.2",
     "axios": ">=0.21.1",
     "dotenv-webpack": "^2.0.0",
     "next": "^13.0.6",
     "next-pwa": "5.5.4",
+    "nextjs-cors": "^2.1.2",
     "nextjs-progressbar": "^0.0.6",
     "perfect-scrollbar": "^1.5.0",
     "prop-types": "^15.7.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "react-animated-css": "^1.2.1",
     "react-copy-to-clipboard": "^5.0.2",
     "react-datepicker": "^3.0.0",
+    "react-dom": "^18.2.0",
     "react-ga": "^3.0.0",
     "react-icons": "^3.10.0",
     "react-lazy-load-image-component": "^1.5.0",
