fix: change analitics to ga4

--- a/package.json
+++ b/package.json
@@ -20,11 +20,12 @@
     "perfect-scrollbar": "^1.5.0",
     "prop-types": "^15.7.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "react-animated-css": "^1.2.1",
     "react-copy-to-clipboard": "^5.0.2",
     "react-datepicker": "^3.0.0",
+    "react-dom": "^18.2.0",
     "react-ga": "^3.0.0",
+    "react-ga4": "^2.0.0",
     "react-icons": "^3.10.0",
     "react-lazy-load-image-component": "^1.5.0",
     "react-number-format": "4.4.1",
