--- a/public/manifest.json
+++ b/public/manifest.json
@@ -21,24 +21,28 @@
   "icons": [
     {
       "src": "/icons/icon48.png",
-      "sizes": "48x48",
-      "type": "image/png"
+      "type": "image/png",
+      "sizes": "48x48"
     },
     {
       "src": "/icons/icon96.png",
-      "sizes": "96x96",
-      "type": "image/png"
+      "type": "image/png",
+      "sizes": "96x96"
     },
     {
       "src": "/icons/icon192.png",
-      "sizes": "192x192",
-      "type": "image/png"
+      "type": "image/png",
+      "sizes": "192x192"
+    },
+    {
+      "src": "/icons/icon384.png",
+      "type": "image/png",
+      "sizes": "384x384"
     },
     {
       "src": "/icons/icon512.png",
-      "sizes": "512x512",
       "type": "image/png",
-      "purpose": "any maskable"
+      "sizes": "512x512"
     }
   ],
   "shortcuts": [
