fix: ajust manifest of APP

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -22,27 +22,62 @@
     {
       "src": "/icons/icon48.png",
       "type": "image/png",
-      "sizes": "48x48"
+      "sizes": "48x48",
+      "purpose": "any"
+    },
+    {
+      "src": "/icons/icon48.png",
+      "type": "image/png",
+      "sizes": "48x48",
+      "purpose": "maskable"
     },
     {
       "src": "/icons/icon96.png",
       "type": "image/png",
-      "sizes": "96x96"
+      "sizes": "96x96",
+      "purpose": "any"
+    },
+    {
+      "src": "/icons/icon96.png",
+      "type": "image/png",
+      "sizes": "96x96",
+      "purpose": "maskable"
     },
     {
       "src": "/icons/icon192.png",
       "type": "image/png",
-      "sizes": "192x192"
+      "sizes": "192x192",
+      "purpose": "any"
+    },
+    {
+      "src": "/icons/icon192.png",
+      "type": "image/png",
+      "sizes": "192x192",
+      "purpose": "maskable"
     },
     {
       "src": "/icons/icon384.png",
       "type": "image/png",
-      "sizes": "384x384"
+      "sizes": "384x384",
+      "purpose": "any"
+    },
+    {
+      "src": "/icons/icon384.png",
+      "type": "image/png",
+      "sizes": "384x384",
+      "purpose": "maskable"
     },
     {
       "src": "/icons/icon512.png",
       "type": "image/png",
-      "sizes": "512x512"
+      "sizes": "512x512",
+      "purpose": "any"
+    },
+    {
+      "src": "/icons/icon512.png",
+      "type": "image/png",
+      "sizes": "512x512",
+      "purpose": "maskable"
     }
   ],
   "shortcuts": [
